wip on repeat, prob too complex

--- a/functional_tests/include/index.html
+++ b/functional_tests/include/index.html
@@ -42,11 +42,15 @@
           value: "two",
           children: [
             {
-              value: "three",
+              value: "four",
               children: [
               ]
             }
           ]
+        },
+        {
+          value: "three",
+          children: []
         }
       ]
     }
