--- a/functional_tests/include/index.html
+++ b/functional_tests/include/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <head>
   <meta charset='utf-8'>
+    <link rel=stylesheet href=../style.css>
+
   <style>
     .tree {
       border: 1px solid #333;
